fixed mobile spacing and sizing a bit

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -270,6 +270,11 @@ a:hover {
 }
 
 @media only screen and (max-width:1000px) {
+    #home-root {
+        display: flex;
+        flex-direction: column;
+    }
+
     #portrait {
         width: 9em;
         height: 9em;
@@ -331,12 +336,11 @@ a:hover {
     }
 
     #about-div {
-        margin-top: 100vh;
         flex-direction: column;
     }
 
     #about-page {
-        height: 200vh;
+        height: 290vh;
     }
 
     #lassonde {
@@ -345,9 +349,12 @@ a:hover {
         object-fit: cover;
     }
 
-    #button-container {
-        margin-top: 30em;
+    .main-button {
+        width: 10em;
+    }
 
+    #button-container {
+        flex-direction: row;
     }
 
     .horizontal-list li {
